some fix of dark mode

--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body {
   font-size: 20px;
   /* background: rgb(255, 255, 255); */
   /* background: linear-gradient(to top, #6bc5d2, #cbf1f5 55%); */
-  margin: -30px 0 0 0;
+  margin: 0;
   padding: 0;
   box-sizing: border-box;
   /* position: relative; */
